<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:keep="@layout/fragment_recipes">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_padding_margin"
        tools:context=".ui.fragments.RecipesFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_no_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/msg_no_recipe"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/action_reload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingBottom="10dp"
            android:background="@color/color_black"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/msg_no_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="@dimen/default_padding_margin"
                android:text="@string/msg_no_network_connection"
                android:textColor="@color/color_white"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/msg_encountered_error"
                android:textColor="@color/color_white"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:drawableStart="@android:drawable/stat_notify_sync_noanim"
                android:drawableLeft="@android:drawable/stat_notify_sync_noanim"
                android:gravity="center"
                android:text="@string/reload_label"
                android:textColor="@color/color_white"
                tools:targetApi="o" />
        </LinearLayout>

        <TextView
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_padding_margin"
            android:background="@color/color_black"
            android:padding="@dimen/default_padding_margin"
            android:text="@string/msg_loading_recipe"
            android:textColor="@color/color_white"
            android:visibility="gone" />
    </FrameLayout>
</layout>