<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:keep="@layout/fragment_recipe_step">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <variable
            name="recipeStep"
            type="com.naijaplanet.magosla.android.thebaker.data.models.RecipeStep" />

        <variable
            name="recipeStepsCount"
            type="int" />

        <variable
            name="twoSidedView"
            type="boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.RecipeStepFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.naijaplanet.magosla.android.thebaker.views.CustomFrameLayout
                android:id="@+id/player_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_padding_margin"
                android:background="@color/color_black">
                <!--
                <com.naijaplanet.magosla.android.thebaker.views.CustomExoPlayerView

                    android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:color/black"
                    android:visibility="@{TextUtils.isEmpty(recipeStep.videoURL) ? View.GONE : View.VISIBLE}"
                    app:show_buffering="always"/>
                     -->

                <!-- -->
                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/black"
                    android:visibility="@{TextUtils.isEmpty(recipeStep.videoURL) ? View.GONE : View.VISIBLE}"
                    app:show_buffering="when_playing" />
                <!-- -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/default_padding_margin"
                    android:text="@string/mgs_no_video"
                    android:textColor="@color/color_white"
                    android:textSize="16sp"
                    android:visibility="@{TextUtils.isEmpty(recipeStep.videoURL) ? View.VISIBLE : View.GONE}" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:visibility="@{TextUtils.isEmpty(recipeStep.videoURL) ? View.GONE : View.VISIBLE}" />
            </com.naijaplanet.magosla.android.thebaker.views.CustomFrameLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_card_detail"
                android:backgroundTint="@color/color_card_detail"
                android:visibility="@{TextUtils.isEmpty(recipeStep.shortDescription) ? View.GONE : View.VISIBLE}"
                app:cardCornerRadius="0dp"
                android:layout_marginBottom="@dimen/default_padding_margin"
                android:layout_marginHorizontal="@dimen/default_padding_margin"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/title_short_description"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22sp"
                    android:padding="@dimen/default_padding_margin"
                    android:text="@{recipeStep.shortDescription}"
                    android:textIsSelectable="true" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_card_detail"
                android:backgroundTint="@color/color_card_detail"
                android:visibility="@{TextUtils.isEmpty(recipeStep.description) ? View.GONE : View.VISIBLE}"
                app:cardCornerRadius="0dp"
                android:layout_marginHorizontal="@dimen/default_padding_margin"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8sp"
                    android:text="@string/title_description"
                    android:textAllCaps="true"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22sp"
                    android:padding="@dimen/default_padding_margin"
                    android:text="@{recipeStep.description}"
                    android:textIsSelectable="true" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="@{!(twoSidedView || !(recipeStepsCount > 1)) ? View.VISIBLE : View.GONE}">

                <Button
                    android:id="@+id/action_prev_step"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_margin="@dimen/default_padding_margin"
                    android:layout_weight="1"
                    android:textColor="@color/color_white"
                    android:textStyle="bold"
                    android:padding="@dimen/default_padding_margin"
                    android:text="@string/label_prev_step"
                    android:drawableLeft="@drawable/ic_chevron_left"
                    android:drawableStart="@drawable/ic_chevron_left"
                    android:visibility="@{recipeStep.stepNo > 0 ? View.VISIBLE : View.GONE}" />

                <Button
                    android:id="@+id/action_next_step"
                    android:layout_width="0dp"
                    android:textColor="@color/color_white"
                    android:textStyle="bold"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding_margin"
                    android:layout_weight="1"
                    android:padding="@dimen/default_padding_margin"
                    android:text="@string/label_next_step"
                    android:drawableRight="@drawable/ic_chevron_right"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:visibility="@{recipeStepsCount-1 > recipeStep.stepNo ? View.VISIBLE :  View.GONE}" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
